@@ -57,6 +57,11 @@
             <div class="right col9">
                 <p class="status-msg success">{% trans "Upload successful. Please update this image with a more appropriate title, if necessary. You may also delete the image completely if the upload wasn't required." %}</p>
                 <p class="status-msg failure">{% trans "Sorry, upload failed." %}</p>
+                <p class="status-msg server-error">
+                    <strong>{% trans "Server Error" %}</strong>
+                    {% trans "Report this error to your webmaster with the following information:"%}
+                    <br /><span class="error-text"></span> - <span class="error-code"></span>
+                </p>
                 <p class="status-msg update-success">{% trans "Image updated." %}</p>
                 <p class="status-msg failure error_messages"></p>
             </div>
